# rust-gs

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  build.sh  buildLocal.sh  index.html  index.html.bak  process_all_ninja_files.sh  prune.py  readme.md  requirements.txt  run_server.sh  server.py  server_readme.md  upload_ply_files.py  upload_to_s3.sh  wasm_bindgen_rayon_docs.txt  webgl-debug.js  worker.js
.cargo/: config.toml
pkg/: README.md  final_project.d.ts  final_project.js  final_project_bg.wasm  final_project_bg.wasm.d.ts  gs_rust.d.ts  gs_rust.js  gs_rust_bg.wasm  gs_rust_bg.wasm.d.ts
pkg/snippets/wasm-bindgen-rayon-38edf6e439f6d70d/src/: worker.js
report/: report.aux  report.out  report.tex
splats/: one-corn.json
src/: DataObjects.rs  OctTree.rs  ToggleBinding.rs  camera.rs  data_objects.rs  editor.rs  gizmo.rs  gui.rs  lib.rs  loader.rs  local.rs  obj_reader.rs  oct_tree.rs  old_ply_loader.rs  packed_format.rs  ply_splat.rs  renderer.rs  scene.rs  scene_geo.rs  scene_object.rs  shared_utils.rs  splat.rs  timer.rs  toggle_binding.rs  utils.rs  var vertexShaderSource = `.js  web.rs
src/local/: local.rs
src/random/: profile_shahan_300000.txt
src/shader/: basic_frag.glsl  basic_vert.glsl  geo_frag.glsl  geo_vert.glsl  line_frag.glsl  line_vert.glsl  mod.rs  splat_frag.glsl  splat_vert.glsl
