[package]
name = "gs-rust"
version = "0.1.0"
authors = ["Shahan Neda <shahan.neda@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"


[[bin]]
name = "web"
path = "src/web.rs"

[[bin]]
name = "local"
path = "src/local/local.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.68"
ply-rs = "0.1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures-io = { version = "0.2.0-beta" }
wasm-bindgen-futures = "0.4.42"
bytes = "1.5.0"
nalgebra-glm = "0.18.0"
egui = "0.26.2"
getrandom = { version = "0.2", features = ["js"] }
eframe = { version = "0.26.0", default-features = false, features = [
    #"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    #"persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = "0.8.8"
speedy = "0.8.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.4", features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'console',
  'Event',
  'MouseEventInit'
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
opt-level = 0

[profile.dev]
opt-level = 0
wasm-opt = false

[profile.dev.package."*"]
opt-level = 0
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[patch.crates-io]
